bpo-28876: bool of large range raises OverflowError (#699) (#735)

(cherry picked from commit e46fb8611867fa3b407a813f53137929b7cb4a10)